tests/syntax_error/too_many_closing_parens.jou
def foo() -> void:
    bar(1))  # Error: ')' without a matching '('
